# comfyui-instantId-faceswap

./: README.md  __init__.py  node.py  nodes.py  pipeline_stable_diffusion_xl_instantid.py  pipeline_stable_diffusion_xl_instantid_inpaint.py  pyproject.toml  requirements.txt  utils.py  workflow_generator.py
ip_adapter/: attention_processor.py  instantId.py  resampler.py
ui/: dialogs.js  extension.js  helpers.js  modal.js  shaders.js  uiHelpers.js
workflows/: 2 embeds.json  auto_rotate.json  draw_kps.json  draw_kps_rotate.json  inpaint.json  lora_3_embed.json  lora_3_embeds.json  promp2image.json  promp2image_detail_pass.json  prompts2img_2faces_enhancement.json  prop2image_latent_upscale.json  prop2image_latent_upscale_with_2d_randomizer.json  prop2image_latent_upscale_with_3d_and_2d_randomizer.json  prop2image_latent_upscale_with_3d_and_2d_randomizer_with_rotation.json  simple.json  simple_two_embeds.json  simple_with_adapter.json  very_simple.json
